# src/app/swagger/swagger.yaml
@@ -131,11 +131,6 @@ paths:
           required: true
           description: Path to create the spriteType at
           type: string
-        - name: body
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/Directory'
       responses:
         '200':
           description: successful operation
